--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ carla = "0.9.13"
 ansicolors = "^1.1.8"
 numpy = "^1.23.4"
 typer = {extras = ["all"], version = "^0.7.0"}
+pydantic = "^1.10.4"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.0"
