--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ ansicolors = "^1.1.8"
 numpy = "^1.23.4"
 typer = {extras = ["all"], version = "^0.7.0"}
 pydantic = "^1.10.4"
+opencv-python = "^4.8.1"
+
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.0"
