--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-carla = "0.9.14"
+carla = "^0.9.15"
 open3d = "^0.15.2"
 ansicolors = "^1.1.8"
 numpy = "^1.23.4"
